be: re-add Twitter OAuth
